# playwright_pytest_bdd

./: conftest.py  pyproject.toml  pytest.ini
Workflows/: example_workflows.py
pages/: login_page.py  product_page.py
tests/features/: login.feature  tests.feature
tests/step_defs/: test_login.py  test_with_bdd_and_using_workflows.py
